--- a/06-reactive/index.html
+++ b/06-reactive/index.html
@@ -11,23 +11,39 @@
     <div class="circle"></div>
   </body>
   <script>
+    const currentPoints = {
+      x: 0,
+      y: 0,
+    };
+
+    const targetPoints = {
+      x: 0,
+      y: 0,
+    };
+
+    const DELTA_TIME = 0.1;
+
+    let frame = 0;
+
     main();
 
     function main() {
       const circleEl = document.querySelector(".circle");
 
+      window.addEventListener("pointermove", (event) =>
+        handlePointerMove(event)
+      );
+
       const setCircleStyleProperty = setElementStyleProperty(circleEl);
 
-      window.addEventListener("pointermove", (event) =>
-        handlePointerMove(event, setCircleStyleProperty)
-      );
+      requestAnimationFrame(animate(setCircleStyleProperty));
     }
 
-    function handlePointerMove(event, setElementStyle) {
+    function handlePointerMove(event) {
       const { clientX, clientY } = event;
-
-      setElementStyle("--x", clientX);
-      setElementStyle("--y", clientY);
+      targetPoints.x = clientX;
+      targetPoints.y = clientY;
+      shouldAnimate = true;
     }
 
     function setElementStyleProperty(element) {
@@ -35,5 +51,30 @@
         element.style.setProperty(property, value);
       };
     }
+
+    function createLerp(start, end, delta) {
+      return (end - start) * delta + start;
+    }
+
+    function animate(setElementStyle) {
+      frame += 1;
+      if (frame % 2 === 0) {
+        currentPoints.x = createLerp(
+          currentPoints.x,
+          targetPoints.x,
+          DELTA_TIME
+        );
+        currentPoints.y = createLerp(
+          currentPoints.y,
+          targetPoints.y,
+          DELTA_TIME
+        );
+
+        setElementStyle("--x", currentPoints.x);
+        setElementStyle("--y", currentPoints.y);
+      }
+      requestAnimationFrame(() => animate(setElementStyle));
+    }
+    cancelAnimationFrame();
   </script>
 </html>
